# SM2-encrypt-and-decrypt-master

./: CMakeLists.txt  Makefile  Makerules  README.md  ReadMe  buildssl.sh  kg_export.h  sm2_create_key_pair.c  sm2_create_key_pair.h  sm2_encrypt_and_decrypt.c  sm2_encrypt_and_decrypt.h  test.cer  test2.cer  test_sm2_encrypt_and_decrypt.h
test/: test_sm2_encrypt_and_decrypt.c
test_key/: ca.key  ca.pem  sm2.pfx  sm2_cert.pem  sm2_pri.key
